# ceflog

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/generator/: main.cpp
examples/local_syslogger/: main.cpp
include/: AsyncSyslogClient.h  CEFEvent.h  CEFEventAbstractSerializer.h  CEFEventFactory.h  CEFEventStringSerializer.h  CEFLog.h  CEFLogMacro.h  EnumClassMacro.h  SelfConsumingQueue.h  SyslogAbstractClientBackend.h  SyslogAsyncClient.h  SyslogBoostClientBackend.h  SyslogSeverity.h
src/: AsyncSyslogClient.cpp  CEFEvent.cpp  CEFEventFactory.cpp  CEFEventStringSerializer.cpp  CEFLog.cpp  SyslogAsyncClient.cpp  SyslogBoostClientBackend.cpp  ceflog.cpp
tests/: CEFEventFactoryTest.cpp  CEFEventStringSerializerTest.cpp  CEFEventTest.cpp  main.cpp
tests/integration/: AsyncSyslogClientTest.cpp  SyslogAsyncClientTest.cpp
tests/unit/: CEFEventFactoryTest.cpp  CEFEventStringSerializerTest.cpp  CEFEventTest.cpp  SyslogBoostClientBackendTest.cpp
